--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,10 @@
             <artifactId>spring-security-core</artifactId>
             <version>6.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
 
 
     </dependencies>
