--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/library?createDatabaseIfNotExist=true
+server.port=8081
 spring.datasource.username=root
 spring.datasource.password=Dupa1324!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
